
06/10/2005	frmb	added deferred target capability to the parser (bit ugly..)
06/10/2005	frmb	initial support for FUNCTIONs, skeleton for MOBILEs
05/10/2005	frmb	some improved handling for ARRAY nodes
03/10/2005	frmb	initial parser handling for ARRAY nodes
03/10/2005	frmb	updated option processing, should handle in-line options successfully for occam-pi
02/10/2005	frmb	IFs half-finished (should code-gen ok for simple cases)
01/10/2005	frmb	various updates to lexer and parser
01/10/2005	frmb	support for short IFs, initial parsing for IF, ALT, etc.
28/09/2005	frmb	fixed up VAL abbreviation initialisation
25/09/2005	frmb	added compiler hook for alloc extra-vars, abbreviations maybe functional
24/09/2005	frmb	some work on abbreviations and value parameters
24/09/2005	frmb	first round of support for INITIAL declarations
18/09/2005	frmb	more work on the usage-checker
18/09/2005	frmb	various minor updates
17/09/2005	frmb	initial support for monadic operators (just "-" and "~" so far)
17/09/2005	frmb	kroc-etc target now tracks stack depths
16/09/2005	frmb	more support for dyadic operators (sorta work, ish :))
16/09/2005	frmb	improved result back-end node handling
15/09/2005	frmb	added back-end-map parse to the mapper
13/09/2005	frmb	added "result" node-type to back-end
12/09/2005	frmb	initial expression/dyadic handling
12/09/2005	frmb	experimentally added "_" as record-subscription in the parser
12/09/2005	frmb	various updates, added target info to _bytesfor() calls
11/09/2005	frmb	split occampi:namestart into occampi:namestartname
11/09/2005	frmb	initial support for RECORDSUBs
10/09/2005	frmb	split front-end data type stuff into occampi_dtype.c
09/09/2005	frmb	fixed some parser issues, now parses more complex data types
07/09/2005	frmb	initial support for DATA TYPEs
07/09/2005	frmb	initialiser hooks and chan-decl initialisation
06/09/2005	frmb	some support for built-in PROCs, got RESCHEDULE() working
05/09/2005	frmb	added pre-check parse